more changes to orientation_with_tps.ipynb and landmarks order file

--- a/folder/example/mri/results/orientation_with_tps.ipynb
+++ b/folder/example/mri/results/orientation_with_tps.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "ff16560d",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "59df4b98",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "19c351ec",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c22a0805",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "c3255716",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:/Users/User/AppData/Local/Temp/xpython_24788/1111638032.py:79: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:/Users/User/AppData/Local/Temp/xpython_17104/1111638032.py:79: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  markups_node.SetNthControlPointPosition(i, *new_position)\n"
      ]
     },
@@ -295,18 +295,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated position of landmark 'femur_l_center' to [[-73.32891438]\n",
-      " [-33.92052942]\n",
-      " [689.13472768]]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated position of landmark 'femur_r_center' to [[ 90.69030244]\n",
-      " [-37.54366773]\n",
-      " [691.90863225]]\n"
+      "Updated position of landmark 'femur_l_center' to [[-89.95580815]\n",
+      " [-27.38315793]\n",
+      " [714.09975727]]\n",
+      "Updated position of landmark 'femur_r_center' to [[ 85.65962052]\n",
+      " [-29.20823215]\n",
+      " [712.3821474 ]]\n"
      ]
     },
     {
@@ -364,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "445edf1b-369f-4a71-9cf5-1950e6b1a55a",
    "metadata": {},
    "outputs": [
@@ -372,7 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-105.7529531    19.68432793  760.54521234] [114.46565354  22.54430983 760.54521234]\n"
+      "[-118.01830803   32.3075716   778.87634475] [117.92074371  32.3075716  778.87634475]\n"
      ]
     }
    ],
@@ -387,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "a8df0a5e-5f17-459c-87ed-cd7534414cae",
    "metadata": {},
    "outputs": [],
@@ -395,6 +389,7 @@
     "pelvis_origin = np.mean((asis_l, asis_r), axis = 0)\n",
     "pelvis_origin_point = lms.AddControlPoint(vtk.vtkVector3d(pelvis_origin))\n",
     "lms.SetNthControlPointLabel(pelvis_origin_point, 'pelvis_origin_in_ground')\n",
+    "#lms.SetNthControlPointLabel(pelvis_origin_point, 'pelvis_origin')\n",
     "\n",
     "psis_l = lms_list[lms.GetControlPointIndexByLabel('PSIS_l')]\n",
     "psis_r = lms_list[lms.GetControlPointIndexByLabel('PSIS_r')]\n",
@@ -406,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "aa1c66fd",
    "metadata": {
     "scrolled": true
@@ -415,10 +410,10 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.052599  ,  0.34265556,  0.93798748])"
+       "array([0.0197006 , 0.30066507, 0.9535263 ])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "0f069126",
    "metadata": {},
    "outputs": [],
@@ -447,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "cdc87d2c",
    "metadata": {},
    "outputs": [],
@@ -485,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "a2ab1adc",
    "metadata": {},
    "outputs": [],
@@ -514,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "1656980d",
    "metadata": {},
    "outputs": [],
@@ -528,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "9ece3661",
    "metadata": {},
    "outputs": [],
@@ -601,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "f10d5cbb",
    "metadata": {
     "scrolled": true
@@ -610,10 +605,10 @@
     {
      "data": {
       "text/plain": [
-       "array([-4.82938871e-04, -2.86033085e-02,  9.99590725e-01])"
+       "array([ 0.07734746, -0.07113303,  0.9944634 ])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "c8fb44e3",
    "metadata": {},
    "outputs": [],
@@ -673,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "4a2a3216",
    "metadata": {},
    "outputs": [],
@@ -701,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "76620f26",
    "metadata": {},
    "outputs": [],
@@ -748,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "5e285faa",
    "metadata": {},
    "outputs": [],
@@ -775,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "0be268a3",
    "metadata": {},
    "outputs": [],
@@ -783,8 +778,16 @@
     "reference_for_warping_node = slicer.util.getNode('lms')\n",
     "reference_for_warping_locations = slicer.util.arrayFromMarkupsControlPoints(reference_for_warping_node)\n",
     "reference_for_warping_names = [reference_for_warping_node.GetNthControlPointLabel(i) for i in range(reference_for_warping_node.GetNumberOfControlPoints())]\n",
-    "template_for_warpintg_locations = template_markers_df.loc[reference_for_warping_names].to_numpy()\n",
-    "\n",
+    "template_for_warpintg_locations = template_markers_df.loc[reference_for_warping_names].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0210f5a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tps_spline = ThinPlateSpline(alpha = 0.001)\n",
     "tps_spline.fit(template_for_warpintg_locations, reference_for_warping_locations)\n",
     "# this sell introduces an order to landmarks which is different from the order in the OpenSim model\n",
@@ -795,37 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "5e9e9bf8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['torso_origin_in_pelvis', 'ASIS_l', 'ASIS_r', 'PSIS_l', 'PSIS_r',\n",
-       "       'pub_infer_c', 'pub_super_c', 'ilium_l', 'ilium_r',\n",
-       "       'pelvis_origin_in_ground',\n",
-       "       ...\n",
-       "       'tibia_r_epiph_yellow_posteriormost', 'tibia_r_ankle_yellow_anter',\n",
-       "       'tibia_r_epiph_green_medial_lower_epiph', 'fibula_r_as',\n",
-       "       'tibia_r_midshaft_anter', 'tibia_r_midshaft_poster',\n",
-       "       'fibula_r_midshaft_anter', 'tibia_r_anter_diaph_25',\n",
-       "       'tibia_r_anter_diaph_75', 'fibula_r_anter_diaph_75'],\n",
-       "      dtype='object', name='name', length=107)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "order.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "17ecd70d",
    "metadata": {},
    "outputs": [],
@@ -900,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "9e3db2f3",
    "metadata": {},
    "outputs": [],
@@ -982,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "88b1c532",
    "metadata": {},
    "outputs": [],
@@ -1006,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "id": "17b3b71f",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "id": "3f03c26f",
    "metadata": {},
    "outputs": [],
@@ -1072,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "02b9cc78",
    "metadata": {},
    "outputs": [],
@@ -1117,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "be25b5d1",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "id": "a45cd2f2",
    "metadata": {},
    "outputs": [],
@@ -1209,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "id": "948ecc9c",
    "metadata": {},
    "outputs": [],
@@ -1255,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "id": "600c75a9",
    "metadata": {},
    "outputs": [],
@@ -1271,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "id": "95ce1f26",
    "metadata": {},
    "outputs": [],
@@ -1292,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "id": "db2234aa",
    "metadata": {},
    "outputs": [],
@@ -1334,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "id": "50c91658",
    "metadata": {},
    "outputs": [],
@@ -1380,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "id": "744c0473",
    "metadata": {},
    "outputs": [],
@@ -1425,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 55,
    "id": "81d18b98",
    "metadata": {},
    "outputs": [],
@@ -1462,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 56,
    "id": "f661ee92",
    "metadata": {},
    "outputs": [],
@@ -1500,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "id": "5df9978b",
    "metadata": {},
    "outputs": [],
@@ -1518,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "id": "e47b4551",
    "metadata": {},
    "outputs": [],
@@ -1537,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "id": "2381fffa",
    "metadata": {},
    "outputs": [],
@@ -1558,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "id": "9d900738",
    "metadata": {},
    "outputs": [],
@@ -1576,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "id": "e43f9ec3",
    "metadata": {},
    "outputs": [],
@@ -1588,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "id": "dc0963a9",
    "metadata": {},
    "outputs": [],
@@ -1606,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "id": "005f55bb",
    "metadata": {},
    "outputs": [],
@@ -1618,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "id": "e72edf8c",
    "metadata": {},
    "outputs": [],
@@ -1626,12 +1599,12 @@
     "# rotate green slice (try vect[1] then vect[2] and choose one that rotates the green slice along)\n",
     "# the longest axis of the outline\n",
     "greenSliceNode = slicer.util.getNode(\"vtkMRMLSliceNodeGreen\")\n",
-    "setSlicePoseFromSliceNormalAndPosition(greenSliceNode, vect[2], tibia_l_outline_center)"
+    "setSlicePoseFromSliceNormalAndPosition(greenSliceNode, vect[1], tibia_l_outline_center)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "id": "3b82dd7e",
    "metadata": {},
    "outputs": [],
@@ -1653,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "id": "19505ff6",
    "metadata": {},
    "outputs": [],
@@ -1673,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "id": "f7ee3b93",
    "metadata": {},
    "outputs": [],
@@ -1687,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "id": "b2b84bbe",
    "metadata": {},
    "outputs": [],
@@ -1752,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "id": "9e4e8417",
    "metadata": {},
    "outputs": [],
@@ -1776,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "id": "36125856",
    "metadata": {},
    "outputs": [],
@@ -1798,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "id": "c52cd593",
    "metadata": {},
    "outputs": [],
@@ -1834,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "id": "eb6c3bb4",
    "metadata": {},
    "outputs": [],
@@ -1880,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "id": "9aeff803",
    "metadata": {},
    "outputs": [],
@@ -1956,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "id": "92aabcd2",
    "metadata": {},
    "outputs": [],
@@ -1974,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "id": "beb6af41",
    "metadata": {},
    "outputs": [],
@@ -1993,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "id": "8f573f1c",
    "metadata": {},
    "outputs": [],
@@ -2014,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "id": "cf0b07f8",
    "metadata": {},
    "outputs": [],
@@ -2029,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 79,
    "id": "99268d68",
    "metadata": {},
    "outputs": [],
@@ -2041,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 80,
    "id": "54b484b1",
    "metadata": {},
    "outputs": [],
@@ -2062,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 81,
    "id": "f33f566a",
    "metadata": {},
    "outputs": [],
@@ -2074,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 82,
    "id": "fd41b679",
    "metadata": {},
    "outputs": [],
@@ -2087,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 83,
    "id": "e54d02c1",
    "metadata": {},
    "outputs": [],
@@ -2109,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 84,
    "id": "996abc03",
    "metadata": {},
    "outputs": [],
@@ -2125,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 85,
    "id": "32366a8f",
    "metadata": {},
    "outputs": [],
@@ -2139,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 86,
    "id": "7eb75861",
    "metadata": {},
    "outputs": [],
@@ -2186,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 87,
    "id": "6f7b6528",
    "metadata": {},
    "outputs": [],
@@ -2220,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 88,
    "id": "f792a06c",
    "metadata": {},
    "outputs": [],
@@ -2244,7 +2217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "id": "0d0f1024",
    "metadata": {},
    "outputs": [],
@@ -2266,7 +2239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 90,
    "id": "0c1611c8",
    "metadata": {},
    "outputs": [],
@@ -2302,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 92,
    "id": "20b829f0",
    "metadata": {},
    "outputs": [],
@@ -2348,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 93,
    "id": "49785a7b",
    "metadata": {},
    "outputs": [],
@@ -2386,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 94,
    "id": "49b5d032",
    "metadata": {},
    "outputs": [],
@@ -2412,22 +2385,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 14,
    "id": "17ac03c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Update location of joints in parent frames that were previousely omitted -- these should have been projected into the correct location anyway but just to make sure\n",
     "lms = slicer.util.getNode('orientation')\n",
-    "lms_list = slicer.util.arrayFromMarkupsControlPoints(lms)\n",
+    "lms_list = slicer.util.arrayFromMarkupsControlPoints(lms)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "42cc8d46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
     "pelvis_origin_in_ground_index = lms.GetControlPointIndexByLabel('pelvis_origin_in_ground')\n",
-    "pelvis_origin_coords = lms_list[lms.GetControlPointIndexByLabel('pelvis_origin')]\n",
-    "lms.SetNthControlPointPosition(pelvis_origin_in_ground_index, \n",
-    "                               pelvis_origin_coords[0], \n",
-    "                               pelvis_origin_coords[1], \n",
-    "                               pelvis_origin_coords[2])\n",
-    "\n",
+    "pelvis_origin_in_ground_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb54d593",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "femur_l_center_coords = lms_list[lms.GetControlPointIndexByLabel('femur_l_center')]\n",
     "femur_l_center_in_pelvis_index = lms.GetControlPointIndexByLabel('femur_l_center_in_pelvis')\n",
     "lms.SetNthControlPointPosition(femur_l_center_in_pelvis_index, \n",
