changes to README.md

--- a/folder/worked_example/mri/results/orientation_with_tps.ipynb
+++ b/folder/worked_example/mri/results/orientation_with_tps.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e6f1f83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install thin-plate-spline # uncomment on the first run to install the package in Slicer Python kernel. Re-launch the kernel after installation is complete."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bdba2610",
    "metadata": {},
